# PerseusSDK

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: log.cmake  utils.cmake
examples/platform/linux/: CMakeLists.txt  basic_control.cpp  config.yaml  logging_example.cpp  path_control.cpp  stack_trace.cpp
perseus_lib/include/: version.h
perseus_lib/include/logging/: backward.hpp  log_common.hpp  perseus_log.h
perseus_lib/include/perseuslib/: perseus_robot.h  version.h
perseus_lib/include/perseuslib/common/: math_common.hpp  math_utils.hpp  robot_state.h  robot_state.hpp  timer_utils.hpp  wisson_exception.h  wisson_exception.hpp
perseus_lib/include/perseuslib/controller/: controller.h  robot_command.hpp
